@@ -23,4 +23,5 @@ t/07try-in-obj-destructor.t
 t/08warndie.t
 t/09dollar-at.t
 t/10throw-in-catch.t
+t/11rethrow.t
 t/lib/MyDie.pm
